--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,5 +38,6 @@ subjects:
 - !lcsh 'Georg V, King of Hannover, 1819-1878 -- Fiction'
 - !lcsh 'Hannover (Germany : Province) -- History -- Fiction'
 - !lcc 'DD'
+- GITenberg
 title: Der Todesgruß der Legionen, 1. Band
 url: http://www.gutenberg.org/ebooks/13657
